--- a/apps/package.json
+++ b/apps/package.json
@@ -17,7 +17,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.2"
+    "react-hook-form": "^7.49.2",
+    "react-timer-hook": "^3.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
